--- a/Eduke/eduke/main/templates/parents/parent_dashboard.html
+++ b/Eduke/eduke/main/templates/parents/parent_dashboard.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Eduke Admin</title>
+  <title>Eduke Parent</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <link rel="icon" href="{% static 'main/images/logobase_white.png' %}">
@@ -51,28 +51,16 @@
                 </a>
               </li>
               <li>
-                <a href="{% url 'admin_classes' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
-                  <i class="fa-solid fa-chalkboard"></i> &nbsp;
-                  Classes
-                </a>
-              </li>
-              <li>
-                <a href="{% url 'admin_teachers' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
+                <a href="{% url 'parent_teacher_profile' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
                   <i class="fa-solid fa-chalkboard-user"></i> &nbsp;
-                  Teachers
+                  Your Teacher
                 </a>
               </li>
               <li>
-                <a href="{% url 'admin_students' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
-                  <i class="fa-solid fa-user-group"></i> &nbsp;
-                  Students
-                </a>
-              </li>
-              <li>
-                  <a href="{% url 'admin_profile' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
+                <a href="{% url 'parent_profile' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
                   <i class="fa-solid fa-circle-user"></i> &nbsp;
                   Profile
-                  </a>
+                </a>
               </li>
               <li>
                 <a href="{% url 'logout' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
@@ -90,33 +78,29 @@
           <!-- Welcome Text -->
           <section class="bg-gray-200 py-6 px-6">
             <h1 class="text-2xl font-bold text-gray-800">Welcome to Eduke!</h1>
-            <p class="text-lg font-bold text-purple-700">{{ institution_name }}</p>
+            <div class="flex items-center space-x-4 mt-2">
+                <p class="text-lg text-gray-600 font-semibold">
+                    PARENT OF <span class="uppercase font-bold text-purple-700">{{ student_name }}</span>
+                </p>
+            </div>
           </section>
 
+
           <!-- Stats -->
-          <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-            <a href="{% url 'admin_teachers' %}">
+          <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-6">
+            <a href="">
               <div class="bg-white p-4 rounded-md shadow hover:bg-gray-100">
-                <h3 class="text-gray-600 font-bold">Active Teachers</h3>
-                <p class="text-2xl font-bold text-purple-700">{{ teacher_count }}</p>
+                <h3 class="text-gray-600 font-semibold">Your Child's Class</h3>
+                <p class="text-2xl font-bold text-purple-700">{{ student_class }}</p>
               </div>
             </a>
-            <a href="{% url 'admin_students' %}">
+            <a href="{% url 'parent_teacher_profile' %}">
               <div class="bg-white p-4 rounded-md shadow hover:bg-gray-100">
-                <h3 class="text-gray-600 font-bold">Active Students</h3>
-                <p class="text-2xl font-bold text-purple-700">{{ student_count }}</p>
-              </div>
-            </a>
-            <a href="{% url 'admin_classes' %}">
-              <div class="bg-white p-4 rounded-md shadow hover:bg-gray-100">
-                <h3 class="text-gray-600 font-bold">Total Classes</h3>
-                <p class="text-2xl font-bold text-purple-700">{{ total_classes }}</p>
+                <h3 class="text-gray-600 font-semibold">Your Child's Class Teacher</h3>
+                <p class="text-2xl font-bold text-purple-700">{{ class_teacher }}</p>
               </div>
             </a>
           </div>
-
-
-
 
           <!-- Recent Activity -->
           <div class="bg-white p-4 rounded-md shadow">
