--- a/Eduke/eduke/main/templates/index.html
+++ b/Eduke/eduke/main/templates/index.html
@@ -62,34 +62,42 @@
     <section id="users" class="py-16 bg-gray-50">
         <div class="container mx-auto p-[100px] md:p-[50px] sm:p-[10px]">
             <h3 class="text-3xl font-bold text-center text-gray-800 mb-8">Users of the System</h3>
-            <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
-                <div class="p-6 bg-white rounded shadow-md text-center">
+            <div class="grid grid-cols-1 md:grid-cols-5 gap-8">
+                <div class="p-6 bg-white rounded-lg shadow-lg text-center flex flex-col justify-between h-full">
                     <img src="{% static 'main/images/admin.png' %}" alt="Admin" class="w-3/4 mx-auto mb-4">
                     <h4 class="text-xl font-semibold mb-4">Admin</h4>
                     <p class="text-gray-600">Oversee system operations, manage user roles, and maintain a seamless experience for all users.</p>
-                    <a href="{% url 'login' %}" class="text-violet-900 hover:text-black mt-4 inline-block">Login as Admin</a>
+                    <a href="{% url 'login' %}" class="text-violet-900 hover:text-black mt-4 inline-block self-center">Admin Login</a>
                 </div>
-                <div class="p-6 bg-white rounded shadow-md text-center">
+                <div class="p-6 bg-white rounded-lg shadow-lg text-center flex flex-col justify-between h-full">
                     <img src="{% static 'main/images/students.png' %}" alt="Student" class="w-3/4 mx-auto mb-4">
                     <h4 class="text-xl font-semibold mb-4">Students</h4>
                     <p class="text-gray-600">Access study materials, view attendance records, and get personalized insights for academic growth.</p>
-                    <a href="{% url 'student_login' %}" class="text-violet-900 hover:text-black mt-4 inline-block">Login as Student</a>
+                    <a href="{% url 'student_login' %}" class="text-violet-900 hover:text-black mt-4 inline-block self-center">Student Login</a>
                 </div>
-                <div class="p-6 bg-white rounded shadow-md text-center">
-                    <img src="{% static 'main/images/teachers.png' %}" alt="Teacher" class="w-3/4 mx-auto mb-4">
-                    <h4 class="text-xl font-semibold mb-4">Teachers</h4>
+                <div class="p-6 bg-white rounded-lg shadow-lg text-center flex flex-col justify-between h-full">
+                    <img src="{% static 'main/images/class_head.png' %}" alt="Teacher" class="w-3/4 mx-auto mb-4">
+                    <h4 class="text-xl font-semibold mb-4">Class Head</h4>
+                    <p class="text-gray-600">Manage students and subjects, and provide feedback to students and parents.</p>
+                    <a href="{% url 'class_head_login' %}" class="text-violet-900 hover:text-black mt-4 inline-block self-center">Class Login</a>
+                </div>
+                <div class="p-6 bg-white rounded-lg shadow-lg text-center flex flex-col justify-between h-full">
+                    <img src="{% static 'main/images/sub_head.png' %}" alt="Teacher" class="w-3/4 mx-auto mb-4">
+                    <h4 class="text-xl font-semibold mb-4">Subject Head</h4>
                     <p class="text-gray-600">Manage attendance, evaluate performance, and provide feedback to students and parents.</p>
-                    <a href="{% url 'teacher_login' %}" class="text-violet-900 hover:text-black mt-4 inline-block">Login as Teacher</a>
+                    <a href="{% url 'subject_head_login' %}" class="text-violet-900 hover:text-black mt-4 inline-block self-center">Subject Login</a>
                 </div>
-                <div class="p-6 bg-white rounded shadow-md text-center">
+                <div class="p-6 bg-white rounded-lg shadow-lg text-center flex flex-col justify-between h-full">
                     <img src="{% static 'main/images/parents.png' %}" alt="Parent" class="w-3/4 mx-auto mb-4">
                     <h4 class="text-xl font-semibold mb-4">Parents</h4>
                     <p class="text-gray-600">Monitor your child's performance, attendance, and communicate with teachers seamlessly.</p>
-                    <a href="{% url 'parent_login' %}" class="text-violet-900 hover:text-black mt-4 inline-block">Login as Parent</a>
+                    <a href="{% url 'parent_login' %}" class="text-violet-900 hover:text-black mt-4 inline-block self-center">Parent Login</a>
                 </div>
             </div>
         </div>
     </section>
+
+
 
 
 
