--- a/Eduke/eduke/main/templates/parents/parent_profile.html
+++ b/Eduke/eduke/main/templates/parents/parent_profile.html
@@ -51,9 +51,21 @@
                 </a>
               </li>
               <li>
+                <a href="{% url 'parent_class' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
+                  <i class="fa-solid fa-chalkboard"></i> &nbsp;
+                  Your Class
+                </a>
+              </li>
+              <li>
                 <a href="{% url 'parent_teacher_profile' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
                   <i class="fa-solid fa-chalkboard-user"></i> &nbsp;
                   Your Teacher
+                </a>
+              </li>
+              <li>
+                <a href="{% url 'parent_chat' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
+                  <i class="fa-solid fa-comments"></i> &nbsp;
+                  Eduke Chat
                 </a>
               </li>
               <li class="bg-gray-300 rounded-md">
