--- a/Eduke/eduke/main/templates/parents/parent_teacher_profile.html
+++ b/Eduke/eduke/main/templates/parents/parent_teacher_profile.html
@@ -50,10 +50,22 @@
                   Dashboard
                 </a>
               </li>
+              <li>
+                <a href="{% url 'parent_class' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
+                  <i class="fa-solid fa-chalkboard"></i> &nbsp;
+                  Your Class
+                </a>
+              </li>
               <li class="bg-gray-300 rounded-md">
                 <a href="#" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
                   <i class="fa-solid fa-chalkboard-user"></i> &nbsp;
                   Your Teacher
+                </a>
+              </li>
+              <li>
+                <a href="{% url 'parent_chat' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
+                  <i class="fa-solid fa-comments"></i> &nbsp;
+                  Eduke Chat
                 </a>
               </li>
               <li>
@@ -76,7 +88,13 @@
           <div class="container mx-auto p-8">
             <div class="bg-white p-6 rounded-lg shadow-md px-[120px]">
               <h1 class="text-2xl text-center text-[#4f0074] font-bold mb-5">Your Teacher Profile</h1>
-                <!-- Section 2: Child Details -->
+              
+              <!-- Add a large image after the heading -->
+              <div class="text-center mb-5">
+                <img src="{% static 'main/images/teacher.png' %}" alt="Teacher Profile Image" class="w-1/4 max-w-3xl mx-auto">
+              </div>
+
+              <!-- Section 2: Child Details -->
               <div class="mb-[20px]">
                 <!-- Row 1 -->
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
@@ -107,6 +125,7 @@
             </div>
           </div>
         </div>
+
 
 
       </div>
