--- a/Eduke/eduke/main/templates/subject_head/subject_head_login.html
+++ b/Eduke/eduke/main/templates/subject_head/subject_head_login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eduke - Teacher Login</title>
+    <title>Eduke - Subject Head Login</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="icon" href="{% static 'main/images/logobase_white.png' %}">
@@ -16,7 +16,7 @@
         <!-- Left image section -->
         <div class="hidden sm:w-1/4 sm:p-[30px] md:flex md:w-1/2 md:items-center md:justify-center bg-gray-100">
             <img src="{% static 'main/images/logo_text.png' %}" 
-                alt="Eduke Registration" 
+                alt="Eduke" 
                 class="h-auto w-3/4 max-h-[1080px] max-w-[1080px] object-cover">
         </div>
 
@@ -24,7 +24,7 @@
         <!-- Form section -->
         <div class="grow w-full md:flex md:w-1/2 md:flex-col md:items-center md:justify-center md:py-20 sm:px-6 px-4">
             <div class="w-full px-4 text-center text-xs lg:w-3/4">
-                <h1 class="mb-8 text-2xl font-bold text-[#4f0074]">Teachers Login</h1>
+                <h1 class="mb-8 text-2xl font-bold text-[#4f0074]">Subject Head Login</h1>
                 <p class="mb-6 text-[#190041]">Continue to explore our amazing features.</p>
 
                 <form class="flex flex-col gap-6" method="POST" novalidate>
